# rizer

./: .gitmodules  CMakeLists.txt
cmake/: common.cmake
examples/: CMakeLists.txt
examples/ex1/: CMakeLists.txt  main.cpp
include/: App.cpp  App.h  GLContext.h
media/: yellowflower.mtl
src/: App.h  Debug.h  FullScreenRenderer.cpp  FullScreenRenderer.h  GLContext.cpp  GLContext.h  GLExtensions.h  Rasterizer.cpp  Rasterizer.h
src/OpenGL/: Buffer.cpp  Buffer.h  ComputeProgram.cpp  ComputeProgram.h  Framebuffer.cpp  Framebuffer.h  Program.h  Texture2D.cpp  Texture2D.h
src/fs/: FileManager.cpp  FileManager.h  OBJLoader.h
src/glsl/: bin_rasterizer.comp  coarse_rasterizer.comp  common.glsl  fine_rasterizer.comp  rasterizer.comp  rasterizer_new.comp  rasterizer_old.comp  triangle_setup.comp
src/math/: vector.h
